--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,8 @@
 }
 
 .img-wrapper {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
