--- a/styles/plan-your-trip.css
+++ b/styles/plan-your-trip.css
@@ -55,3 +55,94 @@
     text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);        
     text-align: center;
 }
+
+/* MAIN CONTENT */
+
+main{
+    width: 100%;
+    height: 100%;
+    background-color: #222831;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.tips-content-container{
+    width:70%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* single tip contnainer */
+
+/* tip title */
+
+.tips-content{
+    width: 100%;    
+    margin: 2rem auto;
+    padding: 1.5rem;
+    background-color:#262f3d;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    border-radius: .5rem;
+}
+
+.tip-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    transition: all .3s ease;
+}
+
+.tip-title-border{
+    border-bottom: 1px solid #fff;   
+    margin-bottom: 2rem;
+    padding-bottom: 1rem;
+}
+
+.tip-title p{
+    font-size: 1.4rem;
+    font-weight: 500;
+    letter-spacing: .6px;
+}
+
+.tip-button{
+    display: inline-block;
+    width: 1.4rem;
+    height: 1.4rem;
+    background-color: transparent;
+    border-color: hsl(209, 61%, 16%);
+    cursor: pointer;
+    outline: none;
+}
+
+.tip-button svg{
+    width: 100%;
+    height: 100%;    
+    color: #fff;
+}
+
+.tip-button .off{
+    display: none;
+}
+
+.down-icon{
+    display: inline;
+}
+
+/* tip text */
+
+.tip-text{
+    display: none;
+    line-height: 1.8rem;
+    font-size: 1.1rem;
+    text-align: justify;
+    transition: display .5s ease;
+}
+
+.tip-text-on{
+    display: block;
+}
