--- a/styles/news.css
+++ b/styles/news.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;    
+    width: 100%;
     background-color: #222831;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
@@ -11,24 +11,24 @@ body {
 .header-contact {
     width: 100%;
     position: relative;
-    overflow: hidden;    
+    overflow: hidden;
     transition: all .3s ease-in;
 }
 
-.intro-title{
+.intro-title {
     width: 70%;
     height: 100%;
     margin: 1rem auto 4rem;
-    text-align: center;    
+    text-align: center;
 }
 
-.intro-title h2{
+.intro-title h2 {
     font-size: 4rem;
     letter-spacing: 2px;
     line-height: 6rem;
 }
 
-.intro-title p{
+.intro-title p {
     width: 90%;
     margin: 0 auto;
     text-align: center;
@@ -38,7 +38,7 @@ body {
 
 /* MAIN CONTENT */
 
-main{
+main {
     width: 90%;
     margin: 0 auto;
     display: flex;
@@ -48,142 +48,357 @@ main{
 
 /* centered news */
 
-.center-news{
+.center-news {
     flex: 60%;
 }
 
-.center-container{
+.center-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
 }
 
-.border{
+.border {
     border-top: 1px solid rgba(158, 157, 157, .7);
     padding-top: 2rem;
 }
 
-.center-img-wrapper{
+.center-img-wrapper {
     width: 33%;
     height: 11rem;
 }
 
-.center-img-wrapper img{
+.center-img-wrapper img {
     width: 100%;
     height: 100%;
     border: 3px solid #3e495a;
 }
 
-.center-content-container{
+.center-content-container {
     width: 60%;
     margin: 0 auto;
 }
 
-.center-content-container h3{
+.center-content-container h3 {
     font-size: 1.7rem;
     line-height: 2rem;
 }
 
-.author{
+.author {
     font-size: .8rem;
     color: rgb(212, 209, 209);
     line-height: 2rem;
 }
 
-.content{
+.content {
     line-height: 1.5rem;
     text-align: justify;
 }
 
-.center-content-container a{
+.center-content-container a {
     color: #fff;
     text-decoration: none;
     transition: color .3s ease;
-    display: inline-block;    
+    display: inline-block;
     letter-spacing: .8px;
 }
 
-.center-content-container a:hover{
+.center-content-container a:hover {
     color: #5fa8d3;
 }
 
 /* right side news */
 
-.right-side-news{
-    flex: 30%;    
-    text-align: center; 
+.right-side-news {
+    flex: 30%;
+    text-align: center;
     margin-left: 2rem;
 }
 
-.right-side-news h2{
+.right-side-news h2 {
     font-size: 2rem;
     line-height: 3rem;
 }
 
-.right-side-container{
+.right-side-container {
     width: 90%;
     margin: 1.5rem auto;
 }
 
-.right-img-wrapper{
+.right-img-wrapper {
     width: 80%;
     height: 10rem;
     margin: 1rem auto;
 }
 
-.right-img-wrapper img{
+.right-img-wrapper img {
     width: 100%;
-    height: 10rem;
+    height: 100%;
     border: 3px solid #3e495a;
 }
 
-.right-side-container button{
+.right-side-container button {
     width: 50%;
     height: 2rem;
     color: #fff;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
     background-color: transparent;
-    outline: none; 
+    outline: none;
     border: 1px solid #fff;
     cursor: pointer;
     transition: border .3s ease;
     transition: color .3s ease;
 }
 
-.right-side-container button:hover{
+.right-side-container button:hover {
     border: 3px solid #5fa8d3;
     color: #5fa8d3;
 }
 
+/* RESPONSIVENESS */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 940px) {
-    .header-contact{
+@media (max-width: 985px) {
+    .header-contact {
         padding-bottom: .5rem;
+    }
+
+    .intro-title {
+        width: 85%;
+    }
+}
+
+@media (max-width: 925px) {
+    main {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* centered news */
+
+    .center-news {
+        flex: 100%;
+    }
+
+    .center-content-container a {
+        line-height: 2;
+    }
+
+    .center-img-wrapper {
+        width: 35%;
+        height: 12.5rem;
+    }
+
+    /* sided news */
+
+    .right-side-news {
+        flex: 100%;
+    }
+
+    .right-side-news {
+        margin-left: 0;
+        margin-top: 3rem;
+    }
+
+    .right-side-news h2 {
+        font-size: 2.7rem;
+        letter-spacing: 2.5px;
+        border-top: 1px solid rgba(158, 157, 157, .7);
+        border-bottom: 1px solid rgba(158, 157, 157, .7);
+        padding: 1rem 0;
+    }
+
+    .right-side-container {
+        margin: 2rem auto 3rem;
+    }
+
+    .right-side-container h3 {
+        font-size: 1.9rem;
+        letter-spacing: 1px;
+        margin-bottom: 2rem;
+    }
+
+    .right-img-wrapper {
+        height: 20rem;
+    }
+
+    .right-side-container button {
+        width: 40%;
+        height: 3rem;
+        font-size: 1.2rem;
+        font-weight: bold;
+        border: 2px solid #fff;
+        margin-top: 1rem;
+    }
+}
+
+@media (max-width: 850px) {
+    .intro-title {
+        width: 95%;
+    }
+
+    .intro-title p {
+        width: 95%;
+    }
+
+    /* centered news */
+    .center-img-wrapper {
+        width: 42%;
+        height: 13rem;
+    }
+
+    .center-content-container {
+        width: 55%;
+    }
+
+    /* right sided */
+    .right-img-wrapper {
+        width: 100%
+    }
+}
+
+@media (max-width: 720px) {
+    main{
+        width: 95%;
+    }
+
+    .intro-title h2 {
+        font-size: 3rem;
+    }
+
+    .intro-title p {
+        font-size: 1.25rem;
+    }
+
+    /* centered news */
+
+    .center-img-wrapper {
+        width: 45%;
+    }
+
+    .center-content-container {
+        width: 50%;
+    }
+
+    .center-content-container h3 {
+        font-size: 1.4rem;
+        line-break: 1.8rem;
+    }
+
+    .author {
+        font-size: 0.7rem;
+    }
+
+    .content {
+        font-size: 1rem;
+        line-height: 1.4rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .intro-title {
+        width: 99%;
+    }
+
+    .intro-title {
+        margin-top: 3rem;
+    }
+
+    .intro-title h2 {
+        font-size: 2.9rem;
+        line-height: 4rem;
+    }
+
+    /* centered news */
+
+    .center-container{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .center-img-wrapper{
+        width: 90%;
+        height: 18rem;
+    }
+
+    .center-content-container{
+        width: 90%;
+    }
+
+    .center-content-container h3 {
+        margin-top: 1rem;
+        font-size: 1.8rem;        
+    }
+
+    /* sided news */
+
+    .right-side-news h2{
+        line-height: 4rem;
+    }
+
+    .right-side-container h3{
+        line-height: 1.5;
+    }
+
+    .right-img-wrapper{
+        height: 18rem;
+    }
+}
+
+@media (max-width: 515px){
+    main{
+        width: 99%;
+    }
+
+    .intro-title p{
+        font-size: 1rem;
+    }    
+
+    .right-side-container h3{
+        font-size: 1.7rem;
+        line-height: 1.2;
+    }
+
+    .right-side-container button{
+        width: 60%;
+    }
+}
+
+@media (max-width: 420px){
+    .intro-title p{
+        font-size: .8rem;
+    }    
+
+    /* centered news */
+    .center-img-wrapper{
+        width: 98%;
+        height: 16.5rem;
+    }
+
+    .center-content-container{
+        width: 98%;
+    }
+
+    .center-content-container h3{
+        font-size: 1.65rem;
+        text-align: justify;
+    }
+
+    .author{
+        font-size: .8rem;
+    }
+
+    /* sided news */
+
+    .right-side-container{
+        width: 98%;
+    }
+
+    .right-img-wrapper{
+        height: 16.5rem;
     }
 }
